# cvdproc

./: .gitattributes  .gitignore  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib  requirements.txt  setup.py
auto_aif_workflow/: graph.json  graph1.json
containers/: index.html
cvdproc/: main.py
cvdproc/bids_data/: bids_utils.py  rename_bids_file.py  session.py  subject.py
cvdproc/config/: logger_config.py  paths.py
cvdproc/controllers/: get_pipeline_workflow.py  pipeline_manager.py  run_pipeline_workflow.py
cvdproc/pipelines/bash/: fdt_dti.sh  fdt_fs_processing.sh  fdt_probtrackx.sh  generate_wm_from_fs.sh  mri_WMHsynthseg_single.sh  pad_dwi.sh  qsm_register.sh  register.sh  run_synb0.sh  wmh_bullseyes_quantification.sh  wmh_fsl_preprocessing.sh  wmh_fsl_preprocessing2.sh  wmh_transform2mni.sh  wmh_volume_quantification.sh
cvdproc/pipelines/common/: binarize.py  calculate_roi_volume.py  calculate_volume.py  copy_file.py  copy_to_rawdata.py  delete_file.py  dwi_resample.py  extract_region.py  files.py  filter_existing.py  flip_b_table.py  image_calc.py  input_for_pipeline.py  merge_filename.py  merge_gifti.py  move_file.py  mpr.py  mri_synthstrip.py  pad_dwi.py  register.py  unzip.py
cvdproc/pipelines/dcm2bids/: dcm2bids_processor.py
cvdproc/pipelines/dmri/: dwi_pipeline.py  fdt_pipeline.py  lqt_pipeline.py  nemo_postprocess_pipeline.py
cvdproc/pipelines/matlab/: wmh_seg_lst.m
cvdproc/pipelines/multi/: arts_pipeline.py
cvdproc/pipelines/network/: network_control_theory.py  network_graph_measures_nipype.py  (+1 more)
cvdproc/utils/: tool_manager.py
dcm2bids/dcm2bids/: index.html
docs/: containers.md  index.md  installation.md  publications.md  usage.md
docs/dcm2bids/: dcm2bids.md
docs/pipelines/: index.md  wmh_quantification.md
installation/: index.html
pipelines/: index.html
pipelines/wmh_quantification/: index.html
publications/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  references.bib
site/containers/: index.html
site/installation/: index.html
site/pipelines/: index.html
site/publications/: index.html
site/search/: search_index-副本20260318144428.json  search_index.json
site/usage/: index-副本20260318144428.html  index.html
usage/: index.html
(+295 files in other folders)
