[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvdproc"
version = "0.0.1"
description = "CVDProc: CerebroVascular Disease imaging Processing"
readme = "README.md"
authors = [
    { name = "Youjie Wang", email = "wangyoujie2002@163.com" }
]
requires-python = ">=3.7"
license = "MIT"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib",
    "scikit-image>=0.18.0",
    "nipype>=1.6.0",
    "dipy",
    "pybids",
    "nibabel>=3.2.0",
    "pyyaml>=5.4.0",
    "xlwt>=1.3.0",
    "scienceplots>=1.0.9",
    "rich",
    "openpyxl",
    "pydicom",
    "dcm2bids",
    "requests",
    "traits",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
quality = [
    "fsqc",
]
network = [
    "bctpy",
    "nctpy",
]
surface = [
    "neuromaps",
    "enigmatoolbox",
]
visualization = [
    "pillow",
    "fury",
]
image-io = [
    "SimpleITK",
]
dmri-models = [
    "dmipy",
    "dmri-amico",
]
pwi = [
    "scikit-learn",
]
deep-learning = [
    "tensorflow",
    "torch",
    "monai",
    "h5py",
    "tqdm",
]

[project.scripts]
cvdproc = "cvdproc.main:main_entry"
cvdproc_tool = "cvdproc.utils.tool_manager:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cvdproc*"]
